# local_vlm_server

./: LICENSE  README.md  local_vlm_example.py  pyproject.toml  requirements.txt  vlm_server.py
lib/: fastvlm.py  heron.py  internvl3.py  lfm2vl.py  moondream.py  qwen.py  smolvlm.py  vlm.py
lib/grpc/: local_vlm_server_pb2.py  local_vlm_server_pb2_grpc.py  vlm_server_pb2.py  vlm_server_pb2_grpc.py
proto/: codegen.py  local_vlm_server.proto  vlm_server.proto
